# master-code

./: .gitignore  formats.ipynb  porto_to_shp.ipynb  pyproject.toml
algo/: .gitattributes  .gitignore  Cargo.toml  algo  config.toml  nohup.out  porto.csv  sample.csv  trajectory_generated.rs
algo/src/: algorithm.rs  dp.rs  dtw_band.rs  main.rs  max_dtw.rs  plot.rs  rest.rs  spatial_filter.rs  trajectory.fbs  trajectory_sample.json
plotting/: compression.csv  knn.csv  plot.py  plot_knn.py  plot_sample.py  pyproject.toml  set_size.csv  tmp.csv  tmp2.csv
plotting/old_plots/: compression.csv
