[tool.poetry]
name = "master"
version = "0.1.0"
description = ""
authors = ["Lars Skifjeld <larssski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fiona = "^1.9.5"
shapely = "^2.0.2"
pandas = "^2.1.1"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
