[package]
name = "algo"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
flatbuffers = "23.5.26"
haversine = "0.2.1"
itertools = "0.12.0"
rayon = "1.9.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rstar = "0.12.0"
toml = "0.8.11"
plotters = "0.3.5"
dtw_rs_band_fork = "1.0.1"
